<?xml version="1.0"?>
<package format="3">
  <name>real_rover</name>
  <version>0.0.0</version>
  <description>Real rover control package</description>
  <maintainer email="qarol46ows@gmail.com">kirill</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>ros2_control</depend>
  <depend>ros2_controllers</depend>
  <depend>tf2_ros</depend>
  <depend>hardware_interface</depend>
  <depend>controller_manager</depend>
  <depend>ros2_control_wheeled_robot_hardware</depend>
  <depend>rviz2</depend>
  <depend>twist_mux</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>