<?xml version="1.0"?>
<package format="3">
  <name>rover_navigation</name>
  <version>0.0.0</version>
  <description>rover Navigation Package</description>
  <maintainer email="mrfrostikom@ya.ru">TMS</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <!-- Core ROS 2 dependencies -->
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_eigen</depend>
  <depend>pcl_conversions</depend>
  <depend>nav2_bringup</depend>
  <depend>nav2_common</depend>
  
  <!-- Navigation dependencies -->
  <depend>slam_toolbox</depend>
  <depend>nav2_navfn_planner</depend>
  <depend>pointcloud_to_laserscan</depend>
  <depend>velodyne_pointcloud</depend>
  
  <!-- PCL dependencies -->
  <depend>libpcl-dev</depend>
  <depend>eigen</depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>